<resources>

    <string name="app_name">Venues</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Foursquare JetPack App</string>
    <string name="nav_header_subtitle">marc.farssac@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    // Permissions
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    // Menus and dialogs
    <string name="settings">Settings</string>
    <string name="show_venues_on_map">Show venues map</string>
    <string name="ok">OK</string>

    // Search
    <string name="no_results">No results 😓</string>
    <string name="show_venues_as_list">Venues list</string>

    <string name="option_show_venues_closest">Closest</string>
    <string name="option_show_venues_all">All Venues</string>
    <string name="option_show_venues_on_screen_as_map">ON MAP</string>
    <string name="option_show_venues_on_screen_as_list">AS LIST</string>

    // Views
    <string name="loading">Loading</string>
    <string name="distance">Distance: %s Km</string>

</resources>
