<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/switch_geolocation"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/show_venues_map"-->
        <!--android:actionLayout="@layout/switch_layout"-->
        <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/option_show_venues_location"
        android:orderInCategory="100"
        android:title="@string/option_show_venues_closest"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/option_show_venues_format"
        android:orderInCategory="100"
        android:title="@string/option_show_venues_on_screen_as_map"
        app:showAsAction="ifRoom" />
</menu>
